# Matlab-Cularis

./: Cularis_Analysis.asv  Cularis_Analysis.m  PUSHTEST.txt  README.md  README.txt  READMEpt2.txt  Untitled.rtf
DigiDat/: Navion.dcm
Functions/: LinearizedModel.asv  LinearizedModel.m
JSBSim/: README.txt
JSBSim/JSBSim-1.0/: JSBSim.vcxproj  UpgradeLog.htm  us.stackdump
JSBSim/JSBSim-1.0/Debug/: vc120.idb
JSBSim/JSBSim_MATLAB_release/: JSBSimGUI_Help.m  JSBSimGUI_sim.fig  JSBSim_SFunction.exp  JSBSim_SFunction.lib  JSBSim_SFunction.m  JSBSim_SFunction.mexw32  JSBSim_SFunction.mexw64  JSBSim_SFunction.xml  JSBSim_SFunction_Trim.exp  JSBSim_SFunction_Trim.lib  JSBSim_SFunction_Trim.mexw32  JSBSim_SFunction_Trim.mexw64  JSBSim_SFunction_Trim.xml  JSBSim_Sfunction User's Guide.doc  JSBSim_Trim.m  JSBSim_model_data.m  README_new.txt  clearSF.m  eigparam.m  f16_datalog.csv  import_data.m  jsbsim_trim_mod.mdl  jsbsim_trim_test.mdl  jsbsimgui_rtw.mdl  jsbsimgui_sim.asv  jsbsimgui_sim.m  jsbsimgui_start.m  jsbsimgui_test.mdl  jsbsimgui_trimmed.mdl  model_data.mat
JSBSim/JSBSim_MATLAB_release/JSBSim/: JSBSim.sln  JSBSim.vcproj  JSBSimGUI.fig  JSBSimGUI.m  JSBSimLib.vcproj  sfuntest_gui.mdl
JSBSim/aircraft Tutorial/Tutorial_1/: Makefile.am  Tutorial_1.xml
JSBSim/aircraft Tutorial/Tutorial_1/plots/: 2c10-a.p  2c2-a.p  2d2-a.p
JSBSim/aircraft Tutorial/Tutorial_1/scripts/: 2c10-a.xml  2c10-a_init.xml  2c2-a.xml  2c2-a_init.xml  2c6-a.xml  2c6-a_init.xml  2c6-b.xml  2c6-b_init.xml  2d2-a.xml  2d2-a_init.xml  Makefile.am
Test/: PleaseReviewThis.txt
(+39 files in other folders)
